// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput onBlur 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput onChange 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput onFocus 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2::-moz-range-thumb > circle,
.c2::-moz-range-thumb > ellipse,
.c2::-moz-range-thumb > line,
.c2::-moz-range-thumb > path,
.c2::-moz-range-thumb > polygon,
.c2::-moz-range-thumb > polyline,
.c2::-moz-range-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2::-moz-range-thumb::-moz-focus-inner {
  border: 0;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2::-ms-thumb > circle,
.c2::-ms-thumb > ellipse,
.c2::-ms-thumb > line,
.c2::-ms-thumb > path,
.c2::-ms-thumb > polygon,
.c2::-ms-thumb > polyline,
.c2::-ms-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2::-ms-thumb::-moz-focus-inner {
  border: 0;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus::-webkit-slider-thumb {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus::-webkit-slider-thumb > circle,
.c2:focus::-webkit-slider-thumb > ellipse,
.c2:focus::-webkit-slider-thumb > line,
.c2:focus::-webkit-slider-thumb > path,
.c2:focus::-webkit-slider-thumb > polygon,
.c2:focus::-webkit-slider-thumb > polyline,
.c2:focus::-webkit-slider-thumb > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus::-webkit-slider-thumb::-moz-focus-inner {
  border: 0;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    max="10"
    min="0"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    type="range"
    value="50"
  />
</div>
`;

exports[`RangeInput should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    aria-label="test"
    class="c1 c2"
    type="range"
    value="50"
  />
</div>
`;

exports[`RangeInput track themed 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,1);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(125,76,219,1);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(125,76,219,1);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    type="range"
    value="10"
  />
</div>
`;

exports[`RangeInput track themed with color and opacity 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(125,76,219,0.3);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(125,76,219,0.3);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(125,76,219,0.3);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    type="range"
    value="10"
  />
</div>
`;

exports[`RangeInput with min and max offset 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: rgba(0,0,0,0.2);
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: rgba(0,0,0,0.2);
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    max="20"
    min="10"
    step="1"
    type="range"
    value="15"
  />
</div>
`;

exports[`RangeInput with multi color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: linear-gradient(to right,rgba(255,0,0,0.5) 0%,rgba(255,0,0,0.5) 22.22222222222222%,rgba(255,255,0,1) 22.22222222222222%,rgba(255,255,0,1) 44.44444444444444%,rgba(0,0,0,0.2) 44.44444444444444%,rgba(0,0,0,0.2));
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    color="[object Object],[object Object],[object Object]"
    max="10"
    min="1"
    step="1"
    type="range"
    value="5"
  />
</div>
`;

exports[`RangeInput with single color 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  -webkit-appearance: none;
  border-color: transparent;
  height: 24px;
  width: 100%;
  padding: 0px;
  cursor: pointer;
  background: transparent;
}

.c2::-moz-focus-inner {
  border: none;
}

.c2::-moz-focus-outer {
  border: none;
}

.c2::-webkit-slider-runnable-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
}

.c2::-webkit-slider-thumb {
  margin-top: -10px;
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
}

background:.c1::-webkit-slider-thumb:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-moz-range-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
}

.c2::-moz-range-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2::-ms-thumb {
  box-sizing: border-box;
  position: relative;
  border-radius: 24px;
  height: 24px;
  width: 24px;
  overflow: visible;
  background: #7D4CDB;
  -webkit-appearance: none;
  cursor: pointer;
  margin-top: 0px;
  height: 24px;
  width: 24px;
}

.c2:hover::-moz-range-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2:hover::-ms-thumb {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c2::-ms-track {
  box-sizing: border-box;
  width: 100%;
  height: 4px;
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  background: border-color:transparent;
  color: transparent;
}

.c2::-ms-fill-lower {
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  border-color: transparent;
}

.c2::-ms-fill-upper {
  background: linear-gradient( to right, #81FCED, #81FCED 44.44444444444444%, rgba(0,0,0,0.2) 44.44444444444444%, rgba(0,0,0,0.2) );
  border-color: transparent;
}

.c2:focus-visible {
  outline: 0;
}

.c2:focus {
  outline: none;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    color="accent-3"
    max="10"
    min="1"
    step="1"
    type="range"
    value="5"
  />
</div>
`;
